Add JWT authentication and Counter/State features
Introduces JWT-based authentication using Spring Security and jjwt, including AuthController, JwtAuthenticationFilter, JwtUtil, and UserDetailsServiceImpl. Adds Counter and State domain models, DTOs, mappers, repositories, services, and controllers. Refactors User, Vacation, and VacationType models and related mappers and services to support new features. Updates application properties and pom.xml for security and JWT configuration.